# Prediction-creator-gui-tool

./: .env.example  .gitignore  GenerateAiPred.py  LICENSE  PredCreator.py  README.md  TwitchApiHandler.py  dbServer.py  init.py  requirements.txt  setup.ps1  setup.sh
.github/workflows/: tauri-build.yml
gui/: .gitignore  my_predictions.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
gui/src/: App.css  App.tsx  main.tsx
gui/src-tauri/: .gitignore  Cargo.toml  my_predictions.json  tauri.conf.json
gui/src-tauri/capabilities/: default.json  fs.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs  twitch_api.rs
gui/src/components/: CreatePrediction.tsx  MainMenu.tsx  MyPredictions.tsx  OAuthCallback.tsx  settings.tsx
gui/src/components/ui/: accountCard.tsx  button.tsx  partnerBadge.tsx  prevPredictionDisplay.tsx
gui/src/tests/: App.test.tsx  CreatePrediction.test.tsx  button.test.tsx  input.test.tsx  setupTests.ts
gui/src/utils/: AlertMessage.tsx  FileHandler.py  JsonHandler.tsx  OAuthCallback.tsx  PredictionsContext.tsx  TwitchContext.tsx  TwitchHandler.tsx  my_predictions.json
